--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
          <div class="form-group">
             <p>If Any Other, then write it's name below:</p>
-            <textarea name="AnyOther" id="" cols="40" rows="3">In case of any other, write here...</textarea>
+            <textarea name="AnyOther" id="" cols="40" rows="3" placeholder="In case of any other, write here..."></textarea>
         </div>
         
          <div class="form-group">
