Added some more styling

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
          <div class="form-group">
             <p>Your Favorite TV Show</p>
             <select name="fav-show" id="dropdown" required>
+                <option value="Select" selected value disabled>Select</option>
                 <option value="Game0fThrones"> Game of Thrones</option>
                 <option value="BreakingBad"> Breaking Bad</option>
                 <option value="Dark">Dark</option>
@@ -48,7 +49,7 @@
             <p>Would you recommend Netflix to a Friend?</p>
             <input type="radio" name="recommend" value="Yes">Definitely<br>
             <input type="radio" name="recommend" value="Maybe">Maybe<br>
-             <input type="radio" name="recommend" value="No">Not sure<br>
+            <input type="radio" name="recommend" value="No">Not sure<br>
         </div>
 
         <div class="form-group">
